# ai-client-rs

./: Cargo.toml
src/: api.rs  main.rs
