[package]
name = "llm-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0.138"
clap = { version = "4", features = ["derive"] }